--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
                                     </h3>
                                     <div data-name="html" data-category="html_and_css">
                                         <a class="w3-bar-item w3-button acctop-link ga-top-drop ga-top-drop-tut-html"
-                                            href="/" title="HTML Tutorial">
+                                            href="/csit/index.html" title="HTML Tutorial">
                                             <span class="learn-span">Learn</span>
-                                            HTML
+                                            CSIT
                                         </a>
                                         <a class="ws-btn acclink-text ga-top-drop ga-top-drop-tut-html" href="/"
                                             title="HTML Tutorial">
