--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                     </h3>
                                     <div data-name="html" data-category="html_and_css">
                                         <a class="w3-bar-item w3-button acctop-link ga-top-drop ga-top-drop-tut-html"
-                                            href="/csit/index.html" title="HTML Tutorial">
+                                            href="/csit/" title="HTML Tutorial">
                                             <span class="learn-span">Learn</span>
                                             CSIT
                                         </a>
