--- a/csit/index.html
+++ b/csit/index.html
@@ -53,8 +53,8 @@
 
 
     <!-- CSS and JavaScript links go here -->
-    <link rel="stylesheet" href="/style/topnav-main.css">
-    <link rel="stylesheet" href="/style/template.css">
+    <link rel="stylesheet" href="/pipara/style/topnav-main.css">
+    <link rel="stylesheet" href="/pipara/style/template.css">
 
 
     <!-- icon cnd link fa fa-caret-down and fa fa-caret-up -->
@@ -64,10 +64,10 @@
     <!-- JavaScript links go here -->
     <!-- <script async data-cfasync="false" src="javaScript/loader.js" type="text/javascript"></script> -->
      <!-- JavaScript links go here -->
-    <script src="/javaScript/common-deps.js"></script>
-    <script src="/javaScript/user-session.js"></script>
+    <script src="/pipara/javaScript/common-deps.js"></script>
+    <script src="/pipara/javaScript/user-session.js"></script>
     <!-- JavaScript links go here -->
-    <script src="/javaScript/my-learning.js"></script>
+    <script src="/pipara/javaScript/my-learning.js"></script>
 
     <!-- google search on websites Search box -->
     <script src="/javaScript/uic.js"></script>
@@ -5260,8 +5260,8 @@
             }
         }
     </script>
-    <script src="/javaScript/topnav-main.js"></script>
-    <script src="/javaScript/template-footer.js"></script>
+    <script src="/pipara/javaScript/topnav-main.js"></script>
+    <script src="/pipara/javaScript/template-footer.js"></script>
 
 
     <!-- change the js file  -->
