--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Open Graph Meta Tags (Facebook, WhatsApp) -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.yourwebsite.com">
+    <meta property="og:url" content="/">
     <meta property="og:title" content="Your Website Title">
     <meta property="og:image" content="logo_link_url___436_2.png">
     <meta property="og:image:type" content="image/png">
@@ -24,10 +24,10 @@
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.yourwebsite.com">
+    <meta property="twitter:url" content="/">
     <meta property="twitter:title" content="Your Website Title">
     <meta property="twitter:description" content="A concise and informative description for Twitter">
-    <meta property="twitter:image" content="https://www.yourwebsite.com/image.jpg">
+    <meta property="twitter:image" content="/">
 
     <!-- Search Engine Meta Tags -->
     <meta name="robots" content="index, follow">
@@ -459,7 +459,7 @@
                                     </h3>
                                     <div data-name="html" data-category="html_and_css">
                                         <a class="w3-bar-item w3-button acctop-link ga-top-drop ga-top-drop-tut-html"
-                                            href="/csit/" title="HTML Tutorial">
+                                            href="/pipara/csit/" title="HTML Tutorial">
                                             <span class="learn-span">Learn</span>
                                             CSIT
                                         </a>
@@ -3545,7 +3545,7 @@
 
         <script>
             var array_search_suggestions = [
-                ["html", "/", "HTML Tutorial"],
+                ["html", "/csit/", "HTML Tutorial"],
                 ["css", "/", "CSS Tutorial"],
                 ["js", "/", "JavaScript Tutorial"],
                 ["python", "//", "Python Tutorial"],
