--- a/index.html
+++ b/index.html
@@ -4066,8 +4066,8 @@
 
         <div class='w3-row w3-white'>
             <div class='w3-col l12 m12' id='main'>
-                 <img src="background-3.gif" alt="Your GIF Image" autoplay="false">
-                <div class="ws-black w3-center herosection">
+                <div class="ws-black w3-center herosection" src="background-3.gif" >
+
                     <div class="w3-content learntocodecontent" style="max-width:1400px">
                         <h1 class="learntocodeh1">Pipara Academy</h1>
                         <h3 class="learntocodeh3">
